--- a/index.css
+++ b/index.css
@@ -23,12 +23,11 @@ h3 {
   color: blueviolet;
 }
 p {
-  font-size: 1em;
+  font-size: 1.3em;
 }
 li {
   font-size: 1.25em;
 }
-
 .container {
   max-width: 1400px;
   margin: auto;
@@ -134,19 +133,116 @@ header a:hover {
   padding: 200px 12px;
 }
 
-#variante .container {
-  text-align: center;
-  padding: 200px 12px;
+#vcv .carts {
+  width: auto;
+  display: flex;
+  justify-content: space-between;
+  margin: 10px;
+  padding: 10px;
 }
 
-#cepa .container {
-  text-align: center;
-  padding: 200px 12px;
+#vcv .cart {
+  border-radius: 15px;
+  margin: 20px;
+  border: 2px solid rgb(0, 0, 0, 0.5);
 }
 
-#virulencia-del-virus .container {
+#vcv .cart {
   text-align: center;
-  padding: 200px 12px;
+}
+
+#vcv .cart:hover {
+  transform: scale(1.1);
+}
+
+#vcv .cart h3 {
+  color: white;
+}
+
+#vcv .cart1 .titulo {
+  padding: 20px 20px;
+  margin: 10px;
+  text-align: center;
+  background-image: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.5),
+      rgba(0, 0, 0, 0.5)
+    ),
+    url("img/variante.jpg");
+  background-size: cover;
+  background-position: center center;
+  border-radius: 15px;
+  transition: all 300ms;
+}
+
+#vcv .cart2 .titulo {
+  padding: 20px 20px;
+  margin: 10px;
+  text-align: center;
+  background-image: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.5),
+      rgba(0, 0, 0, 0.5)
+    ),
+    url("img/cepa.jpg");
+  background-size: cover;
+  background-position: center center;
+  border-radius: 15px;
+  transition: all 300ms;
+}
+
+#vcv .cart3 .titulo {
+  padding: 20px 20px;
+  margin: 10px;
+  text-align: center;
+  background-image: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.5),
+      rgba(0, 0, 0, 0.5)
+    ),
+    url("img/virulencia.png");
+  background-size: cover;
+  background-position: center center;
+  border-radius: 15px;
+  transition: all 300ms;
+}
+
+#vcv .cart:hover .titulo{
+  transform: scale(1.01);
+}
+
+#vcv .cart .texto-cart {
+  padding-top: 20px;
+}
+
+#vcv .cart hr {
+  margin-top: 30px;
+  border: none;
+  height: 0.1px;
+  background: #41414138;
+}
+
+#vcv .cart a{
+  color: black;
+}
+
+#vcv .cart a:hover{
+  color: blueviolet;
+}
+
+#vcv .cart .footer-cart{
+  text-decoration: none;
+  padding-top: 30px;
+  padding-bottom: 20px;
+}
+
+.carts{
+  position: relative;
+  top: 0;
+  left: 0;
+  transform: none;
+  margin-top: 100px;
+  padding-bottom: 100px;
 }
 
 #proteina-s .container {
@@ -265,34 +361,33 @@ footer {
 }
 
 @media (min-width: 720px) {
-
   header {
     background-color: transparent;
     position: fixed;
     width: 100%;
-    transition: .7s;
+    transition: 0.7s;
     z-index: 10;
   }
 
-  header .logo{
+  header .logo {
     color: white;
   }
 
-  header.abajo{
+  header.abajo {
     background-color: white;
     padding: 15px 5px;
     width: 100%;
   }
 
-  header.abajo .logo{
+  header.abajo .logo {
     color: blueviolet;
   }
 
-  header.abajo nav a{
+  header.abajo nav a {
     color: black;
   }
 
-  header.abajo nav a:hover{
+  header.abajo nav a:hover {
     color: blueviolet;
   }
 
@@ -307,19 +402,14 @@ footer {
     padding-right: 20px;
   }
 
-  header nav a{
+  header nav a {
     color: white;
   }
 
-  #hero{
+  #hero {
     position: relative;
-    background: 
-    linear-gradient(
-      0deg,
-      rgba(0, 0, 0, 0.5),
-      rgba(0, 0, 0, 0.5)
-    ),
-    url("img/hero.jpg");
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+      url("img/hero.jpg");
     background-size: cover;
     background-position: center center;
   }
@@ -480,6 +570,109 @@ footer {
     background-position: center center;
     height: 400px;
     width: 400px;
+  }
+
+  #vcv .carts {
+    width: auto;
+    display: flex;
+    justify-content: space-between;
+    margin: 10px;
+    padding: 10px;
+  }
+
+  #vcv .cart {
+    border-radius: 15px;
+    margin: 20px;
+    border: 2px solid rgb(0, 0, 0, 0.5);
+  }
+
+  #vcv .cart {
+    text-align: center;
+  }
+
+  #vcv .cart:hover {
+    transform: scale(1.1);
+  }
+
+  #vcv .cart h3 {
+    color: white;
+  }
+
+  #vcv .cart1 .titulo {
+    padding: 20px 20px;
+    margin: 10px;
+    text-align: center;
+    background-image: linear-gradient(
+        0deg,
+        rgba(0, 0, 0, 0.5),
+        rgba(0, 0, 0, 0.5)
+      ),
+      url("img/variante.jpg");
+    background-size: cover;
+    background-position: center center;
+    border-radius: 15px;
+    transition: all 300ms;
+  }
+
+  #vcv .cart2 .titulo {
+    padding: 20px 20px;
+    margin: 10px;
+    text-align: center;
+    background-image: linear-gradient(
+        0deg,
+        rgba(0, 0, 0, 0.5),
+        rgba(0, 0, 0, 0.5)
+      ),
+      url("img/cepa.jpg");
+    background-size: cover;
+    background-position: center center;
+    border-radius: 15px;
+    transition: all 300ms;
+  }
+
+  #vcv .cart3 .titulo {
+    padding: 20px 20px;
+    margin: 10px;
+    text-align: center;
+    background-image: linear-gradient(
+        0deg,
+        rgba(0, 0, 0, 0.5),
+        rgba(0, 0, 0, 0.5)
+      ),
+      url("img/virulencia.png");
+    background-size: cover;
+    background-position: center center;
+    border-radius: 15px;
+    transition: all 300ms;
+  }
+
+  #vcv .cart:hover .titulo{
+    transform: scale(1.01);
+  }
+
+  #vcv .cart .texto-cart {
+    padding-top: 20px;
+  }
+
+  #vcv .cart hr {
+    margin-top: 30px;
+    border: none;
+    height: 0.1px;
+    background: #41414138;
+  }
+
+  #vcv .cart a{
+    color: black;
+  }
+
+  #vcv .cart a:hover{
+    color: blueviolet;
+  }
+
+  #vcv .cart .footer-cart{
+    text-decoration: none;
+    padding-top: 30px;
+    padding-bottom: 20px;
   }
 
   #proteina-s .container {
