--- a/css/estilos.css
+++ b/css/estilos.css
@@ -40,7 +40,7 @@
     align-items: center;
     justify-content: center;
 
-    background-image: url('../fondo.jpg');
+    background-image: url('../img/fondo.jpg');
     background-size: cover;
     background-position: center center;
 
