--- a/css/index.css
+++ b/css/index.css
@@ -697,6 +697,49 @@ footer {
     width: 400px;
   }
 
+  #muertes .titulo{
+    text-align: center;
+    padding-bottom: 20px;
+  }
+
+  #muertes .container{
+    border: solid 1px rgba(12,12,12,0.2);
+  }
+
+  #muertes table{
+    font-size: 20px;
+    table-layout: fixed;
+    border-collapse: collapse;
+  }
+
+  #muertes thead{
+    background: #7a7a7a;
+  }
+
+  #muertes th{
+    padding: 20px 15px;
+    font-weight: 700;
+    text-transform: uppercase;
+    text-align: center;
+  }
+
+  #muertes td{
+    width: 800px;
+    padding: 15px;
+    border-bottom: solid 1px rgb(12, 12, 12, 0.2);
+  }
+
+  #muertes tr{
+    width: 800px;
+    padding: 15px;
+    border-bottom: solid 1px rgb(12, 12, 12, 0.2);
+    text-align: center;
+  }
+
+  #muertes tbody tr:hover{
+    background: rgb(30, 30, 30, 0.2);
+  }
+
   #prevencion .container {
     display: flex;
     justify-content: space-evenly;
