--- a/css/index.css
+++ b/css/index.css
@@ -23,7 +23,8 @@ h3 {
   color: blueviolet;
 }
 p {
-  font-size: 1.3em;
+  text-align: justify;
+  font-size: 1.1em;
 }
 li {
   font-size: 1.25em;
@@ -359,6 +360,8 @@ footer {
   height: 1px;
   background-color: #7a7a7a;
 }
+
+/* ------------------------------------------------------------------------------------------------------------------- */
 
 @media (min-width: 720px) {
   header {
