--- a/css/login-estilos.css
+++ b/css/login-estilos.css
@@ -2,170 +2,145 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  text-decoration: none;
   font-family: "Roboto", sans-serif;
 }
 
 body {
-  background-image: linear-gradient(
-      0deg,
-      rgba(0, 0, 0, 0.5),
-      rgba(0, 0, 0, 0.5)
-    ),
-    url(../img/hero.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-attachment: fixed;
-}
-
-main {
-  width: 100%;
-  padding: 20px;
-  margin: auto;
-  margin-top: 100px;
-}
-
-.contenedor__todo {
-  width: 100%;
-  max-width: 800px;
-  margin: auto;
-  position: relative;
-}
-
-.caja__trasera {
-  width: 100%;
-  padding: 10px 20px;
-  display: flex;
-  justify-content: center;
-  -webkit-backdrop-filter: blur(10px);
-  backdrop-filter: blur(10px);
-  background-color: rgba(0, 128, 255, 0.5);
-}
-
-.caja__trasera div {
-  margin: 100px 40px;
-  color: white;
-  transition: all 500ms;
-}
-
-.caja__trasera div p,
-.caja__trasera button {
-  margin-top: 30px;
-}
-
-.caja__trasera div h3 {
-  font-weight: 400;
-  font-size: 26px;
-}
-
-.caja__trasera div p {
-  font-size: 16px;
-  font-weight: 300;
-}
-
-.caja__trasera button {
-  padding: 10px 40px;
-  border: 2px solid #fff;
-  font-size: 14px;
-  background: transparent;
-  font-weight: 600;
-  cursor: pointer;
-  color: white;
-  outline: none;
-  transition: all 300ms;
-}
-
-.caja__trasera button:hover {
-  background: #fff;
-  color: #46a2fd;
-}
-
-/*Formularios*/
-
-.contenedor__login-register {
+  height: 100vh;
   display: flex;
   align-items: center;
-  width: 100%;
-  max-width: 380px;
-  position: relative;
-  top: -185px;
-  left: 10px;
-
-  transition: left 500ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  justify-content: center;
+  background-image: url(../img/hero.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #fff;
 }
 
-.contenedor__login-register form {
-  width: 100%;
-  padding: 80px 20px;
-  background: white;
-  position: absolute;
-  border-radius: 20px;
+.container-form {
+  width: 90%;
+  height: 90vh;
+  display: flex;
+  justify-content: space-around;
+  transition: all 0.5s ease-out;
 }
 
-.contenedor__login-register form h2 {
-  font-size: 30px;
+.welcome-back {
+  display: flex;
+  align-items: center;
   text-align: center;
-  margin-bottom: 20px;
-  color: #46a2fd;
 }
 
-.contenedor__login-register form input {
-  width: 100%;
-  margin-top: 20px;
-  padding: 10px;
+.message {
+  padding: 1rem;
+}
+
+.message h2 {
+  font-size: 1.7rem;
+  padding: 1rem 0;
+}
+
+.message button {
+  padding: 1rem;
+  font-weight: 400;
+  background-color: #4a4aee;
+  border-radius: 2rem;
   border: none;
-  background: #f2f2f2;
-  font-size: 16px;
   outline: none;
-}
-
-.contenedor__login-register form button {
-  padding: 10px 40px;
-  margin-top: 40px;
-  border: none;
-  font-size: 14px;
-  background: #46a2fd;
-  font-weight: 600;
   cursor: pointer;
-  color: white;
-  outline: none;
+  font-size: 0.9rem;
+  margin-top: 2rem;
+  transition: all 0.3s ease-in;
+  color: #fff;
 }
 
-.formulario__login {
-  opacity: 1;
+.message button:hover {
+  background-color: #6464f8;
+}
+
+.formulario {
+  width: 400px;
+  padding: 1rem;
+  margin: 2rem;
+  background-color: rgb(51, 51, 51, 0.602);
+  text-align: center;
+}
+
+.create-account {
+  padding: 2.7rem 0;
+  font-size: 1.7rem;
+}
+
+.iconos {
+  width: 200px;
+  display: flex;
+  justify-content: space-around;
+  margin: auto;
+}
+
+.border-icon {
+  height: 20px;
+  width: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1.5rem;
+  border: solid thin white;
+  border-radius: 50%;
+  font-size: 1.5rem;
+  transition: all 0.3s ease-in;
+}
+
+.border-icon:hover {
+  background-color: #4a4aee;
+  cursor: pointer;
+}
+
+.cuenta-gratis {
+  padding: 2rem 0;
+}
+
+.formulario input {
+  width: 70%;
   display: block;
+  margin: auto;
+  margin-bottom: 2rem;
+  background-color: transparent;
+  border: none;
+  border-bottom: white thin solid;
+  text-align: center;
+  outline: none;
+  padding: 0.2rem 0;
+  font-size: 0.9rem;
+  color: white;
 }
-.formulario__register {
-  display: none;
+
+.formulario input[type="button"] {
+  width: 60%;
+  margin: auto;
+  border: solid thin white;
+  padding: 0.7rem;
+  border-radius: 2rem;
+  background-color: white;
+  font-weight: 600;
+  margin-top: 3rem;
+  font-size: 0.8rem;
+  cursor: pointer;
+  color: #222;
 }
 
-@media screen and (max-width: 850px) {
-  main {
-    margin-top: 50px;
-  }
+.sign-in {
+  position: absolute;
+  opacity: 0;
+  visibility: hidden;
+}
 
-  .caja__trasera {
-    max-width: 350px;
-    height: 300px;
-    flex-direction: column;
-    margin: auto;
-  }
+.sign-in.active {
+  opacity: 1;
+  visibility: visible;
+}
 
-  .caja__trasera div {
-    margin: 0px;
-    position: absolute;
-  }
-
-  /*Formularios*/
-
-  .contenedor__login-register {
-    top: -10px;
-    left: -5px;
-    margin: auto;
-  }
-
-  .contenedor__login-register form {
-    position: relative;
-  }
+.sign-up.active {
+  opacity: 0;
+  visibility: hidden;
 }
