--- a/css/index.css
+++ b/css/index.css
@@ -464,17 +464,52 @@ footer {
     }
   }
 
+  /* Estilos imagenes___________________________________________________________ */
+
+  .container .img figure:hover > .capa {
+    color: white;
+    opacity: 1;
+    visibility: visible;
+  }
+
+  .container .img figure .capa p {
+    padding-top: 35%;
+    font-size: 2.5em;
+    text-align: center;
+  }
+
+  .container .img figure {
+    position: relative;
+    height: 400px;
+    width: 400px;
+    overflow: hidden;
+    border-radius: 6px;
+    box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.5);
+    cursor: pointer;
+  }
+
+  .container .img figure .capa {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(30, 30, 30, 0.7);
+    transition: all 500ms ease-out;
+    opacity: 0;
+    visibility: hidden;
+  }
+
+  .container .img figure img {
+    width: 100%;
+    height: 100%;
+    transition: all 500ms ease-out;
+  }
+
+  /* ____________________________________________________ */
+
   #descripcion-general .container {
     display: flex;
     justify-content: space-evenly;
-  }
-
-  #descripcion-general .img-oms {
-    background-image: url("../img/oms.jpg");
-    background-size: cover;
-    background-position: center center;
-    height: 400px;
-    width: 400px;
   }
 
   #descripcion-general .texto {
